--- a/index.html
+++ b/index.html
@@ -26,62 +26,65 @@
 		</header>
 		<span>Выберите сущности:</span>
 		  <div>
-		    <input type="checkbox" id="text" >
-		    <label for="text">Текст</label>
-		    <select>
-			  <option value="one">1</option>
-			  <option value="two">2</option>
-			  <option value="three">3</option>
-			  <option value="four">4</option>
-			  <option value="five">5</option>
-			</select>
-		  </div>
-		  <div>
 		    <input type="checkbox" id="headline" >
 		    <label for="headline">Заголовок</label>
 		    <select>
-			  <option value="one">1</option>
-			  <option value="two">2</option>
-			  <option value="three">3</option>
-			  <option value="four">4</option>
-			  <option value="five">5</option>
+			  <option value="1">1</option>
+			  <option value="2">2</option>
+			  <option value="3">3</option>
+			  <option value="4">4</option>
+			  <option value="5">5</option>
+			</select>
+		  </div>
+	      <div>
+		    <input type="checkbox" id="text" >
+		    <label for="text">Текст</label>
+		    <select>
+			  <option value="1">1</option>
+			  <option value="2">2</option>
+			  <option value="3">3</option>
+			  <option value="4">4</option>
+			  <option value="5">5</option>
 			</select>
 		  </div>
   		  <div>
 		    <input type="checkbox" id="image" >
 		    <label for="image">Изображение</label>
 		    <select>
-			  <option value="one">1</option>
-			  <option value="two">2</option>
-			  <option value="three">3</option>
-			  <option value="four">4</option>
-			  <option value="five">5</option>
+			  <option value="1">1</option>
+			  <option value="2">2</option>
+			  <option value="3">3</option>
+			  <option value="4">4</option>
+			  <option value="5">5</option>
 			</select>
 		  </div>
 		  <div>
 		    <input type="checkbox" id="form">
 		    <label for="form">Форма</label>
 		    <select>
-			  <option value="one">1</option>
-			  <option value="two">2</option>
-			  <option value="three">3</option>
-			  <option value="four">4</option>
-			  <option value="five">5</option>
+			  <option value="1">1</option>
+			  <option value="2">2</option>
+			  <option value="3">3</option>
+			  <option value="4">4</option>
+			  <option value="5">5</option>
 			</select>
 		  </div>
 		  <div>
 		    <input type="checkbox" id="link">
 		    <label for="link">Ссылка</label>
 		    <select>
-		  	  <option value="one">1</option>
-		  	  <option value="two">2</option>
-		  	  <option value="three">3</option>
-		  	  <option value="four">4</option>
-		  	  <option value="five">5</option>
+		  	  <option value="1">1</option>
+		  	  <option value="2">2</option>
+		  	  <option value="3">3</option>
+		  	  <option value="4">4</option>
+		  	  <option value="5">5</option>
 		  	</select>
 		    </div>
+		    <button class="send">Готово</button>
 	</section>
 	<section class="result">
+		<p></p>
 	</section>
+	<script src="js/app.js"></script>
 </body>
 </html>
