--- a/index.html
+++ b/index.html
@@ -19,12 +19,9 @@
 </head>
 
 <body>
-
+	<h1 class="select-title">Генератор дизайна блоков</h1>
 	<section class="form">
-		<header>
-      		<h1 class="select-title">Генератор дизайна блоков</h1>
-		</header>
-		<span>Выберите сущности:</span>
+		<h4>Выберите сущности:</h4>
 		  <div>
 		    <input type="checkbox" id="headline" >
 		    <label for="headline">Заголовок</label>
@@ -80,7 +77,6 @@
 		  	  <option value="5">5</option>
 		  	</select>
 		    </div>
-		    <button class="send">Готово</button>
 	</section>
 	<section class="result">
 		<p></p>
